2006-12-30  Marcus Meissner  <marcus@jet.franken.de>

	From libmtp developers.
	* ptp.c,ptp.h: Lots of new MTP defines and
	  debug output.
	* ptp-pack.c: Fixed bugs in ObjectInfo packing
	  magic.

2006-12-29  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added Kodak C875, HP Photosmart R967.
	* config.c: Report battery level (read-only)

2006-12-28  Marcus Meissner  <marcus@jet.franken.de>

	* library.c, ptp.h, ptp.c, ptpip.c:

	  Rewrote the whole data flow handling to allow streaming of
	  data from and to PTP devices without taking up memory.

	  Introduced generic PTPDataHandler with get and putfunctions. 

2006-12-21  Marcus Meissner  <marcus@jet.franken.de>

	* Added Kodak V570 as reported.
	* Added iRiver T20 and N12 as reported from libmtp.

2006-12-19  Marcus Meissner  <marcus@jet.franken.de>

	* ptp.c: Fixed FD writing with short files (from libmtp).

2006-12-17  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Fixed leaking CameraFile + data on Canon and Nikon
	  capture.

2006-12-16  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added HP Photosmart E427.

2006-12-14  Marcus Meissner  <marcus@jet.franken.de>

	* ptp.h,ptp.c,config.c: Imported some knowledge from libptp2.

2006-12-13  Marcus Meissner  <marcus@jet.franken.de>

	* ptp.c,ptp.h: Added "BuyNow" property define and debugoutput.
	* ptp-pack.c: Handle offset of DPVs of INT64 and INT128 datatype
	  correct.
	
	* library.c: Fast directory tree and metadata retrieval for
	  MTP devices.

2006-12-08  Marcus Meissner  <marcus@jet.franken.de>

	* ptp.c: Get back to split headers in getobjectpropertylist.
	* ptp-pack.c: Fixed string packing. Include terminating \0.

2006-12-04  Marcus Meissner  <marcus@jet.franken.de>

	* ptp.c: Fixed the response packet in-data-phase
	  handling to actually work. From libmtp folks.

2006-12-02  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added Canon PowerShot SD600, HP Photosmart C500.
