@@ -29,6 +29,7 @@
 #define PTP_MTP				(1<<3)
 #define PTP_CAP				(1<<4)
 #define PTP_CAP_PREVIEW			(1<<5)
+#define PTP_MTP_PROPLIST_WORKS		(1<<6)
 
 #define DCIM_WRONG_PARENT_BUG(x) \
   ((x)->bugs & PTPBUG_DCIM_WRONG_PARENT)
